# ntsu-ytwrapper

./: LICENSE  README.md  pyproject.toml  requirements.txt
ntsuwrap/: __init__.py  bucket.py  monolithic_base.py
ntsuwrap/api_wrap/: __init__.py  ep_channelslist.py  ep_playlistitemslist.py  ep_videoslist.py  youtube_status.py
ntsuwrap/exceptions/: custom_exceptions.py
tests/: .gitignore  __init__.py  channels_test.py
